Lesson 2: fix version initializer, links open in new window

--- a/public/about.html
+++ b/public/about.html
@@ -15,6 +15,6 @@
       опубликовать результаты в соц. сетях
     </p>
 
-    <a href="http://www.thinknetica.com">www.thinknetica.com</a>
+    <a href="http://www.thinknetica.com" target="_blank">www.thinknetica.com</a>
   </body>
 </html>
