--- a/public/about/autor.html
+++ b/public/about/autor.html
@@ -17,7 +17,7 @@
     <p></p>
     <p>
       Другие работы можно посмотреть сдесь: <br>
-      <a href="https://github.com/miheykrug">github.com/miheykrug</a>
+      <a href="https://github.com/miheykrug" target="_blank">github.com/miheykrug</a>
     </p>
 
   </body>
